<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="easy_care">EASY CARE</string>	
    <string name="app_name">easyCare1</string>
    <string name="hello_world">hello world</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_secon_page">SeconPage</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="your_name">your name</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="input_id">Input id</string>
    <string name="input_password">Input password</string>
    <string name="your_password">pass word</string>
    <string name="log_in">Log in</string>
    <string name="me_nu">Menu</string>
    <string name="send_condition">Send condition</string>
    <string name="watch_graph">Watch graph</string>
    <string name="send_message">Message</string>
	<string name="new_message">New message</string>
	<string name="in_box">Inbox</string>
	<string name="camera">Camera</string>
	<string name="send">Send</string>
	<string name="patient_message">Patient message</string>
	<string name="input_weight">Input your weight</string>
	<string name="weight">Weight</string>
	<string name="kilogram">Kg.</string>
	<string name="next">Next</string>
	<string name="back">Back</string>
	<string name="inputperiodoftime">Input your period of time</string>
	<string name="morning">Morning</string>
	<string name="afternoon">Afternoon</string>
	<string name="evening">Evening</string>
	<string name="inputlasixconsumption">Input your dose of lasix</string>
	<string name="lasix">Lasix</string>
	<string name="mg">Mg.</string>
	<string name="pill">Pills</string>
	<string name="inputbloodpressure">Input your blood pressure</string>
	<string name="sys">SYS</string>
	<string name="dya">DYA</string>
	<string name="mmhg">mmHg.</string>
	<string name="inputsignofheartfailure">Input your sign of heart failure</string>
	<string name="periodoftime">Period of time</string>
	<string name="doseoflasix">Dose of lasix</string>
	<string name="bloodpressure">Blood pressure</string>
	<string name="signofheartfailure">Sign of heart failure</string>
	<string name="typeyourmessage">Type your message....</string>
	<string name="backtoweight">Back</string>
	<string name="backtotime">Back</string>
	<string name="backtodoseoflasix">Back</string>
	<string name="backtobloodpressure">Back</string>
	<string name="backtosignofheartfailure">Back</string>
	<string name="backtomenufromcondition">Back</string>
	<string name="backtomenufromgraph">Back</string>
	<string name="backtomenufrommessage">Back</string>
	<string name="nexttoperiodoftime">Next</string>
	<string name="nexttobloodpressure">Next</string>
	<string name="nexttodoseoflasix">Next</string>
	<string name="nexttosignofheartfaillure">Next</string>
	<string name="nexttosendcondition">Send</string>
</resources>
