<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_x="2dp"
        android:layout_y="1dp"
        android:maxHeight="300dp"
        android:maxWidth="350dp"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="126dp"
        android:layout_y="48dp"
        android:text="@string/easy_care"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_x="177dp"
        android:layout_y="178dp"
        android:ems="10"
        android:hint="@string/input_id"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_x="171dp"
        android:layout_y="220dp"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="numberPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="63dp"
        android:layout_y="227dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="94dp"
        android:layout_y="184dp"
        android:text="@string/id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/nextconclusion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="227dp"
        android:layout_y="354dp"
        android:text="@string/log_in" />

</AbsoluteLayout>	
