<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_x="2dp"
        android:layout_y="1dp"
        android:maxHeight="300dp"
        android:maxWidth="350dp"
        android:src="@drawable/background" />
    
    
    <Button
        android:id="@+id/sendmessage"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_x="70dp"
        android:layout_y="328dp"
        android:text="@string/send_message" />

    <Button
        android:id="@+id/watchgraph"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_x="70dp"
        android:layout_y="224dp"
        android:text="@string/watch_graph" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="116dp"
        android:layout_y="32dp"
        android:text="@string/me_nu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <Button
        android:id="@+id/sendcondition"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_x="65dp"
        android:layout_y="114dp"
        android:text="@string/send_condition" />
    
  </AbsoluteLayout>