<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
  
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_x="2dp"
        android:layout_y="1dp"
        android:maxHeight="300dp"
        android:maxWidth="350dp"
        android:src="@drawable/background" />
     <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="42dp"
            android:layout_y="50dp"
            android:gravity="center"
            android:text="@string/inputlasixconsumption"
            android:textAppearance="?android:attr/textAppearanceLarge" />

     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_x="55dp"
         android:layout_y="51dp"
         android:src="@drawable/lasix" />

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_x="31dp"
         android:layout_y="239dp"
         android:text="@string/lasix"
         android:textAppearance="?android:attr/textAppearanceLarge" />

     <EditText
         android:id="@+id/editText1"
         android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:layout_x="98dp"
         android:layout_y="232dp"
         android:ems="10"
         android:inputType="textPassword" >

         <requestFocus />
     </EditText>

     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_x="234dp"
         android:layout_y="239dp"
         android:text="@string/mg"
         android:textAppearance="?android:attr/textAppearanceLarge" />

     <EditText
         android:id="@+id/editText2"
         android:layout_width="124dp"
         android:layout_height="wrap_content"
         android:layout_x="98dp"
         android:layout_y="286dp"
         android:ems="10"
         android:inputType="textPassword" />

     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_x="234dp"
         android:layout_y="290dp"
         android:text="@string/pill"
         android:textAppearance="?android:attr/textAppearanceLarge" />
     
     
    <Button
        android:id="@+id/backtomenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="27dp"
        android:layout_y="382dp"
        android:text="@string/back" />
    
    <Button
        android:id="@+id/nexttobloodpressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="233dp"
        android:layout_y="386dp"
        android:text="@string/nexttobloodpressure" />
     
</AbsoluteLayout>
