<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

      
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_x="2dp"
        android:layout_y="1dp"
        android:maxHeight="300dp"
        android:maxWidth="350dp"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="77dp"
        android:layout_y="52dp"
        android:gravity="center"
        android:text="@string/input_weight"
        android:textAppearance="?android:attr/textAppearanceLarge" />
		
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="56dp"
        android:layout_y="57dp"
        android:src="@drawable/weightpicture" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="237dp"
        android:layout_y="238dp"
        android:text="@string/kilogram"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="21dp"
        android:layout_y="240dp"
        android:text="@string/weight"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_x="94dp"
        android:layout_y="231dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/nexttobloodpressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="233dp"
        android:layout_y="386dp"
        android:text="@string/nexttodoseoflasix" />

    <Button
        android:id="@+id/backtotime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="27dp"
        android:layout_y="382dp"
        android:text="@string/backtomenufromcondition" />

</AbsoluteLayout>
