<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_x="2dp"
        android:layout_y="1dp"
        android:maxHeight="300dp"
        android:maxWidth="350dp"
        android:src="@drawable/background" />

	   <TextView
	       android:id="@+id/textView1"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_x="10dp"
	       android:layout_y="48dp"
	       android:gravity="center"
	       android:text="@string/inputsignofheartfailure"
	       android:textAppearance="?android:attr/textAppearanceLarge" />

	   <ImageView
	       android:id="@+id/imageView2"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_x="44dp"
	       android:layout_y="-2dp"
	       android:src="@drawable/signofheartfailure" />

	   <ImageButton
	       android:id="@+id/imageButton1"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_x="-10dp"
	       android:layout_y="0dp"
	       android:background="@drawable/cameraicon"
	       android:src="@drawable/cameraicon" />

	   <EditText
	       android:id="@+id/editText1"
	       android:layout_width="261dp"
	       android:layout_height="139dp"
	       android:layout_x="31dp"
	       android:layout_y="212dp"
	       android:ems="10"
	       android:inputType="textPostalAddress" >

	       <requestFocus />
	   </EditText>
	    <Button
        android:id="@+id/backsignofheartfailure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="27dp"
        android:layout_y="382dp"
        android:text="@string/back" />
    
    
    <Button
        android:id="@+id/nextconclusion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="233dp"
        android:layout_y="386dp"
        android:text="@string/next" />
    
</AbsoluteLayout>
